@@ -112,7 +112,7 @@
  </tr>
  	<tr>
 		<td class="leftc">{icon:configure} {lang:more}</td>
-		<td class="leftb"><input type="checkbox" name="replays_close" value="1" {replays:close_check} /> {lang:close}</td>
+		<td class="leftb"><input type="checkbox" name="wars_close" value="1" {value:close_check} /> {lang:close}</td>
 	</tr>
  <tr>
   <td class="leftc">{icon:ksysguard} {lang:options}</td>
